--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: 前程记
 email: acthtml[at]gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   前端程序员笔记
-baseurl: "/blog/" # the subpath of your site, e.g. /blog/
-url: "http://acthtml.github.io" # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "http://dai-hua.com" # the base hostname & protocol for your site
 github_username:  acthtml
 
 # Build settings
