--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: 前程记
+title: dai-hua.com
 email: acthtml[at]gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  前端程序员笔记
+  一个简单的程序员笔记本
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://dai-hua.com" # the base hostname & protocol for your site
 
