--- a/assets/polymer-start/bower.json
+++ b/assets/polymer-start/bower.json
@@ -1,7 +1,8 @@
 {
   "name": "polymer start",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.0.0"
+    "polymer": "Polymer/polymer#^1.0.0",
+    "icon-elements" : "PolymerElements/iron-elements"
   },
   "version": "0.0.0",
   "authors": [
