--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Dai Hua
+title: acthtml
 email: acthtml[at]gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   一个简单的前端程序员笔记本
